--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Website</title>
-    
-    <script src="https://cdn.tailwindcss.com"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
@@ -14,105 +14,20 @@
 
 <body class="font-sans text-gray-800">
 
-    <div >
-        
-    </div>
+    <header>
 
-    <div >
-        <!-- Navbar -->
-        <header class="border-b">
-            <div class="container mx-auto flex justify-between items-center px-6 py-3">
-                <div class="flex items-center gap-3">
-                    <div class="bg-yellow-400 w-10 h-10 rounded-full flex items-center justify-center font-bold">R</div>
-                    <a href="#" class="font-semibold text-lg">www.mywebsite.com</a>
-                </div>
-                <nav class="space-x-4">
-                    <a href="#" class="px-3 py-1 border rounded hover:bg-gray-100">Home</a>
-                    <a href="#" class="px-3 py-1 border rounded hover:bg-gray-100">Our Profile</a>
-                    <a href="#" class="px-3 py-1 border rounded hover:bg-gray-100">Portfolio</a>
-                    <a href="#message" class="px-3 py-1 border rounded hover:bg-gray-100">Message Us</a>
-                </nav>
-            </div>
-        </header>
+    </header>
 
-        <!-- Hero Section -->
-        <section class="text-center py-12 border-b">
-            <h1 class="text-2xl font-semibold">Hi Harfi, Welcome To Website</h1>
-            <p class="text-gray-600 mt-2">Ini adalah website latihan pertama</p>
-            <div class="bg-gray-200 w-11/12 md:w-3/4 h-80 mx-auto mt-8 flex items-center justify-center text-gray-400">
-                1366×576
-            </div>
-        </section>
 
-        <!-- Our Headquarters -->
-        <section class="py-12 border-b">
-            <h2 class="text-center text-xl font-semibold mb-8">Our Headquarter</h2>
-            <div class="flex flex-col md:flex-row justify-center items-center gap-8">
-                <div class="flex flex-col items-center">
-                    <div class="w-32 h-32 border rounded-full flex items-center justify-center mb-2"> </div>
-                    <span>Jakarta</span>
-                </div>
-                <div class="flex flex-col items-center">
-                    <div class="w-32 h-32 border rounded-full flex items-center justify-center mb-2"> </div>
-                    <span>Bandung</span>
-                </div>
-                <div class="flex flex-col items-center">
-                    <div class="w-32 h-32 border rounded-full flex items-center justify-center mb-2"> </div>
-                    <span>Surabaya</span>
-                </div>
-            </div>
-        </section>
+    <main>
 
-        <!-- Message Us -->
-        <section id="message" class="py-12 border-b">
-            <h2 class="text-xl font-semibold text-center mb-6">Message Us</h2>
-            <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between gap-6">
+    </main>
 
-                <!-- Form -->
-                <form class="flex-1 space-y-4">
-                    <div>
-                        <label class="block font-medium">Nama</label>
-                        <input type="text" class="border w-full p-2 rounded" placeholder="Nama">
-                    </div>
 
-                    <div>
-                        <label class="block font-medium">Tanggal Lahir</label>
-                        <input type="date" class="border w-full p-2 rounded">
-                    </div>
+    <footer>
 
-                    <div>
-                        <label class="block font-medium">Jenis Kelamin</label>
-                        <div class="flex items-center gap-4 mt-1">
-                            <label><input type="radio" name="gender" checked> Laki-Laki</label>
-                            <label><input type="radio" name="gender"> Perempuan</label>
-                        </div>
-                    </div>
+    </footer>
 
-                    <div>
-                        <label class="block font-medium">Pesan</label>
-                        <textarea class="border w-full p-2 rounded" rows="4" placeholder="Pesan"></textarea>
-                    </div>
-
-                    <button type="submit" class="bg-gray-200 px-4 py-2 rounded hover:bg-gray-300">Submit</button>
-                </form>
-
-                <!-- Output box -->
-                <div class="flex-1 border p-4 rounded">
-                    <p><strong>Current time:</strong> Fri, Jun 17 2022 11:27:38 GMT+0100</p>
-                    <p class="mt-3"><strong>Nama:</strong> Harfi Novian</p>
-                    <p><strong>Tanggal Lahir:</strong> 03/17/1995</p>
-                    <p><strong>Jenis Kelamin:</strong> Laki-Laki</p>
-                    <p><strong>Pesan:</strong> Lagi belajar buat website</p>
-                </div>
-
-            </div>
-        </section>
-
-        <!-- Footer -->
-        <footer class="text-center py-4 text-sm text-gray-500">
-            Created By ReruU
-        </footer>
-    </div>
 
     <script type="text/javascript">
         me.initilize();
