Mulai dari awal, dengan konsep yang lebih konsisten dan terstruktur.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,24 @@
 
 
     <main>
+        <div id="home">
 
+        </div>
+
+
+        <div id="OurProfile">
+
+        </div>
+
+
+        <div id="Portfolio">
+
+        </div>
+
+
+        <div id="MessageUs">
+
+        </div>
     </main>
 
 
