--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 
 
     <main>
-        <div id="home">
+        <div id="AskingName">
+
+        </div>
+
+
+        <div id="Home">
 
         </div>
 
