added bulma css framework

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Website</title>
 
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="css/bulma-prefixed.min.css">
 
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
@@ -20,28 +21,28 @@
 
 
     <main>
-        <div id="AskingName">
-
+        <div id="AskingName" class="bulma-is-hidden">
+            a
         </div>
 
 
         <div id="Home">
-
+            b
         </div>
 
 
         <div id="OurProfile">
-
+            c
         </div>
 
 
         <div id="Portfolio">
-
+            d
         </div>
 
 
         <div id="MessageUs">
-
+            e
         </div>
     </main>
 
