--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                             Whether you’re building a product, exploring ideas, or just want to chat tech — let’s
                             connect!
                         </p>
-                        <a href="#Home"
+                        <a href="#Home" onclick="me.message_us()"
                             class="bg-amber-500 hover:bg-amber-600 text-white px-8 py-3 rounded-lg font-medium transition">
                             Get in Touch
                         </a>
